Fix sidelist z-index

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -140,7 +140,7 @@ body {
     width: 472px;
     background-color: #fff;
     border-left: 1px solid $brand-border-color;
-    z-index: 99;
+    z-index: 201;
     right: 0;
     bottom: 0;
     overflow-y: scroll;
